# Eluna-CMaNGOS-TBC

./: .gitignore  .gitmodules  CMakeLists.txt
.github/workflows/: macos.yml  ubuntu.yml  windows-release.yml  windows.yml
cmake/: options.cmake  showoptions.cmake
contrib/mmap/src/: MapBuilder.cpp
dep/: CMakeLists.txt
dep/lualib/: CMakeLists.txt
sql/base/: characters.sql  mangos.sql
sql/create/: db_drop_mysql.sql
src/: CMakeLists.txt
src/game/: CMakeLists.txt
src/game/AuctionHouse/: AuctionHouseHandler.cpp
src/game/BattleGround/: BattleGround.cpp  BattleGroundMgr.cpp
src/game/Chat/: Chat.cpp  Chat.h  ChatHandler.cpp
src/game/DBScripts/: ScriptMgr.cpp
src/game/Entities/: Camera.cpp  CharacterHandler.cpp  Creature.cpp  Creature.h  GameObject.cpp  GameObject.h  Item.cpp  Item.h  ItemPrototype.h  MiscHandler.cpp  NPCHandler.cpp  Object.cpp  Object.h  PetitionsHandler.cpp  Player.cpp  Player.h  StatSystem.cpp  Totem.cpp  Unit.cpp  Unit.h
src/game/Globals/: Locales.h  ObjectMgr.cpp  ObjectMgr.h
src/game/Grids/: GridNotifiers.cpp  GridNotifiers.h  GridNotifiersImpl.h
src/game/Groups/: Group.cpp  Group.h  GroupHandler.cpp
src/game/Guilds/: Guild.cpp  Guild.h  GuildHandler.cpp
src/game/Loot/: LootMgr.cpp
src/game/Mails/: MailHandler.cpp
src/game/Maps/: Map.cpp  Map.h  MapManager.cpp
src/game/MotionGenerators/: MotionMaster.cpp  MotionMaster.h  MovementHandler.cpp  PathFinder.h  (+2 more)
src/mangosd/: CMakeLists.txt  Master.cpp  WorldRunnable.cpp  mangosd.conf.dist.in
src/modules/: CMakeLists.txt
src/shared/: CMakeLists.txt  Log.cpp  Log.h
(+23 files in other folders)
